# verano2026code

./: .gitignore  README.md  opencode.json
advanced-games-unity/: AGENTS.md  opencode.json
ai-dungeon-master/: AGENTS.md  ai_client.py  config.py  game_state.py  main.py  prompts.py  test_game.py
api-definicion/: README.md
classic-donkeykong/: index.html
directory-analyzer/: README.md  analyzer.py  server.py
directory-analyzer-hermes/: analyzer.py  server.py
doom/: AGENTS.md  export_presets.cfg  main.gd  main.gd.uid  main.tscn  project.godot
flappy-bird/: icon.svg.import  project.godot
fractal-viewer/: README.md
fractal-viewer/c/: CMakeLists.txt
fractal-viewer/c/src/: fractal.c  fractal.h  main.c  palette.c  palette.h  renderer.c  renderer.h  viewport.c  viewport.h  worker.c  worker.h
graphical-escape-room/: game.py  main.py  renderer.py  room.py
graphify-out/: .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
minecraft/: blocks.py  game.js  index.html  main.py  player.py  renderer.py  world.py
nannoid/: README.md  constants.py  main.py
pacman-clone/: constants.py  game.py  ghost.py  maze.py  player.py  scoreboard.py
pdf-exam-hermes/: README.md  pdf_exam_hermes.py
pdf-exams/: README.md  pdf_exams.py
processing/: boids.pde  fractal_tree.pde  interactive.pde  morph.pde  particles.pde  waves.pde
pyo/: enjoy_the_silence.py
pythonbot/: bot.py  news.html
repo-searcher/: README.md  gui.py  repo_searcher.py
simple-games/: app.js  rps.py  (+6 more)
simple-games-hermes/: app.js  index.html  style.css
(+148 files in other folders)
